--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.11.0",
+    "react-native-splash-screen": "^3.0.6",
     "react-navigation": "^4.4.1",
     "react-navigation-drawer": "^2.5.1",
     "react-navigation-stack": "^2.8.3"
