--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-background-timer": "^2.4.1",
     "react-native-calendars": "^1.403.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-reanimated": "^1.13.1",
