--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^5.9.2",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
+    "date-fns": "^2.16.1",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-native": "0.63.2",
