--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <meta-data  android:name="com.dieam.reactnativepushnotification.notification_color"
             android:resource="@color/app_bg"/> <!-- or @android:color/{name} to use a standard color -->
 
+        <meta-data android:name="com.dieam.reactnativepushnotification.channel_create_default" android:value="true"/>
+
         <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" />
         <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" />
         <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver">
