--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-background-timer": "^2.4.1",
+    "react-native-calendar-events": "^2.2.0",
     "react-native-calendars": "^1.403.0",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.8.0",
-    "react-native-push-notification": "^7.0.0",
+    "react-native-push-notification": "^7.3.0",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-safe-area-view": "^1.1.1",
