--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^5.9.2",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
+    "axios": "^0.24.0",
     "date-fns": "^2.16.1",
     "native-base": "^2.13.14",
     "react": "16.13.1",
@@ -38,7 +39,8 @@
     "react-native-splash-screen": "^3.0.6",
     "react-navigation": "^4.4.1",
     "react-navigation-drawer": "^2.5.1",
-    "react-navigation-stack": "^2.8.3"
+    "react-navigation-stack": "^2.8.3",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
